--- a/Lab 2/index.html
+++ b/Lab 2/index.html
@@ -11,15 +11,12 @@
     <p>CSS Playground</p>
 
     <img
-      src="https://static.vecteezy.com/system/resources/thumbnails/036/324/708/small/ai-generated-picture-of-a-tiger-walking-in-the-forest-photo.jpg"
+      src="https://png.pngtree.com/thumb_back/fh260/background/20230411/pngtree-nature-forest-sun-ecology-image_2256183.jpg"
       alt="Floating"
       class="float-img"
     />
     <p class="float-text">
-      wrapped text paragraph. Lorem ipsum dolor sit amet, consectetur
-      adipisicing elit. Neque error quisquam repellat assumenda amet, ad fugiat.
-      Velit cumque molestias culpa eius ducimus hic quae ipsa dolore vel,
-      accusantium omnis laudantium.
+      wrapped text paragraph.
     </p>
 
     <button>Click Me!</button>
