--- a/Lab 3/index.html
+++ b/Lab 3/index.html
@@ -50,21 +50,21 @@
             <tbody>
               <tr>
                 <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@markotto</td>
+                <td>Arshad</td>
+                <td>Al</td>
+                <td>@galib</td>
               </tr>
               <tr>
                 <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@jacob</td>
+                <td>Sample_2</td>
+                <td>Sample_2</td>
+                <td>@Sample_2</td>
               </tr>
               <tr>
                 <th scope="row">3</th>
-                <td>Larry</td>
-                <td>Bird</td>
-                <td>@larry</td>
+                <td>Sample_3</td>
+                <td>Sample_3</td>
+                <td>@Sample_3</td>
               </tr>
             </tbody>
           </table>
