--- a/Lab 5/pages/home.html
+++ b/Lab 5/pages/home.html
@@ -18,9 +18,9 @@
     ></script>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <p>Welcome to the Home Page</p>
-    <a href="/add-fruit" class="btn btn-secondary">Add a Fruit</a>
+    <h1>Fruit Zone</h1>
+    <p>Welcome to the fruit Page</p>
+    <a href="/add-fruit" class="btn btn-secondary">Add Fruit</a>
     <a href="/list" class="btn btn-secondary">Go to Fruit List</a>
   </body>
 </html>
